--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,13 @@ jobs:
         with:
           node-version: 20
 
+      - name: Enforce Svelte runes event syntax
+        run: |
+          if rg --files-with-matches --glob "*.svelte" "on:[a-zA-Z]" tauri-app/src >/dev/null; then
+            echo "Use onclick/oninput style events (Svelte 5 runes) instead of on: syntax" >&2
+            exit 1
+          fi
+
       - name: LOC enforcement
         run: node scripts/ci/loc-enforce.js
         env:
@@ -32,4 +39,3 @@ jobs:
           sudo apt-get update && sudo apt-get install -y libgtk-3-dev webkit2gtk-4.1 libayatana-appindicator3-dev librsvg2-dev || true
           rustup update stable
           (cd tauri-app/src-tauri 2>/dev/null || cd src-tauri 2>/dev/null; cargo fmt --all -- --check && cargo clippy --workspace -- -D warnings)
-
