fix(dev): set tauri default-run and clean svelte config warning

--- a/tauri-app/src-tauri/Cargo.toml
+++ b/tauri-app/src-tauri/Cargo.toml
@@ -3,6 +3,12 @@ name = "tauri-app"
 version = "0.0.1"
 edition = "2021"
 authors = ["color-tool"]
+default-run = "tauri-app"
+
+[features]
+default = ["simd"]
+bench-crate = ["kmeans_colors", "palette"]
+simd = ["dep:wide"]
 
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
@@ -15,6 +21,10 @@ image = { version = "0.25", default-features = false, features = ["png", "jpeg",
 tauri = { version = "2.0", features = [] }
 tauri-plugin-shell = "2.0"
 tauri-plugin-dialog = "2.0"
+chrono = { version = "0.4", default-features = false, features = ["clock"] }
+wide = { version = "0.7", optional = true, default-features = false, features = ["std"] }
+kmeans_colors = { version = "0.6", optional = true, default-features = false, features = ["palette_color"] }
+palette = { version = "0.7", optional = true, default-features = false, features = ["std"] }
 
 [dev-dependencies]
 tempfile = "3.10"
