--- a/tauri-app/package.json
+++ b/tauri-app/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@tauri-apps/api": "^2.0.0",
+    "@tauri-apps/plugin-dialog": "^2.0.0",
     "svelte": "^5.0.3"
   },
   "devDependencies": {
