--- a/tauri-app/package.json
+++ b/tauri-app/package.json
@@ -11,16 +11,14 @@
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "check": "svelte-check --tsconfig ./tsconfig.json",
+    "test": "vitest run",
     "tauri": "tauri"
   },
   "dependencies": {
-    "@tauri-apps/api": "^2.0.0",
-    "@tauri-apps/plugin-dialog": "^2.0.0",
     "svelte": "^5.0.3"
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^6.2.1",
-    "@tauri-apps/cli": "^2.0.0",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
     "eslint": "^9.9.0",
@@ -30,6 +28,7 @@
     "svelte-check": "^4.3.2",
     "tslib": "^2.6.2",
     "typescript": "^5.4.0",
-    "vite": "^7.1.7"
+    "vite": "^7.1.7",
+    "vitest": "^1.6.0"
   }
 }
