--- a/tauri-app/package.json
+++ b/tauri-app/package.json
@@ -15,10 +15,13 @@
     "tauri": "tauri"
   },
   "dependencies": {
-    "svelte": "^5.0.3"
+    "@tauri-apps/api": "^2.8.0",
+    "svelte": "^5.0.3",
+    "zod": "^4.1.11"
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^6.2.1",
+    "@tauri-apps/cli": "^2.8.4",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
     "eslint": "^9.9.0",
